# appointment-with-pdf-extraction-1

./: .dockerignore  .env  .env.docker  .gitignore  DOCKER_README.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run.py  streamlit_app.py  test_chat_flow.py
app/: app.py  main.py
app/agent/: agent.py  symptom_engine.py
app/api/: auth.py  doctors_cache.py  external_client.py  hmis_service.py
app/config/: settings.py
app/mcp/: mcp_client.py  mcp_server.py
app/models/: schemas.py
medical_qa/: abha_validator.py  chat_engine.py  config.py  document_parse.py  file_processor.py  rag_store.py  route.py
medical_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_config/: machine_id_v4
user_data/data/14785236978965/: WhatsApp Image 2026-04-01 at 10.18.47 AM (1).json  WhatsApp Image 2026-04-01 at 10.18.47 AM.json
user_data/data/extractions/85112749398866/: WhatsApp Image 2026-02-24 at 5.14.20 PM.json
